Trying a scrollbar fix for Firefox

--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ body {
     align-items: center;
     justify-content: center;
     flex-direction: column;
-
+    overflow: hidden;
 }
 
 #clock {
